# Wingbeat

./: Cargo.toml  LANGUAGE_MODEL_SUPPORT.md  LICENSE  README.md
benches/: swarm_benchmark.rs
examples/: distributed_swarm.rs  language_model_swarm.rs  real_inference_demo.rs  visual_demo.rs
src/: lib.rs  main.rs  orchestrator.rs
src/computation/: enhanced_processor.rs  mod.rs  model_decomposer.rs  prompt_processor.rs
src/core/: mod.rs  subgraph.rs
src/inference/: layer_ops.rs  mod.rs  model_weights.rs  tensor_ops.rs  tokenizer.rs
src/swarm/: mod.rs  tornado.rs
tests/: swarm_tests.rs
